--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -35,6 +35,17 @@
   cursor: pointer;
   display: inline-flex;
   align-items: center;
+  gap: var(--spacing-sm);
+}
+
+.navbar-logo-img {
+  height: 2rem;
+  width: auto;
+  object-fit: contain;
+}
+
+.navbar-logo-text {
+  display: inline-block;
 }
 
 .navbar-menu {
@@ -88,6 +99,10 @@
 
   .navbar-logo {
     font-size: 1.5rem;
+  }
+
+  .navbar-logo-img {
+    height: 1.5rem;
   }
 
   .navbar-menu {
